fixed buttons and alignment in home

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -24,11 +24,14 @@ body.home {
 }
 .languages {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin: 2rem;
 }
 .languages > .cta {
   margin: 0 2rem;
+}
+.cta.de {
+  margin-top: 2rem;
 }
 .logo-home {
   max-width: 20rem;
