--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -75,9 +75,6 @@
   .contact-wrapper {
     grid-template-columns: 90%;
   }
-  * {
-    margin: 0 auto;
-  }
   .contacts {
     margin-top: 2rem;
   }
